<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LTrabajosFragment">

    <!-- TODO: Update blank fragment layout -->
   <ScrollView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:scrollbars="none">
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <ImageButton
               android:layout_width="match_parent"
               android:layout_height="130dp"
               android:scaleType="centerCrop"
               android:src="@drawable/sleep"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:layout_marginBottom="8dp"
               android:textStyle="bold"
               android:text="@string/sleep"/>
           <ImageButton
               android:layout_width="match_parent"
               android:layout_height="130dp"
               android:scaleType="centerCrop"
               android:src="@drawable/pinochio"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textStyle="bold"
               android:layout_marginBottom="8dp"
               android:gravity="center"
               android:text="@string/pinochio"/>
           <ImageButton
               android:layout_width="match_parent"
               android:layout_height="130dp"
               android:scaleType="centerCrop"
               android:src="@drawable/doctor"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textStyle="bold"
               android:layout_marginBottom="8dp"
               android:gravity="center"
               android:text="@string/drstrange"/>
           <ImageButton
               android:layout_width="match_parent"
               android:layout_height="130dp"
               android:scaleType="centerCrop"
               android:src="@drawable/school"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textStyle="bold"
               android:layout_marginBottom="8dp"
               android:gravity="center"
               android:text="@string/school"/>
           <ImageButton
               android:layout_width="match_parent"
               android:layout_height="130dp"
               android:scaleType="centerCrop"
               android:src="@drawable/worlds"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textStyle="bold"
               android:layout_marginBottom="8dp"
               android:gravity="center"
               android:text="@string/wworlds"/>
           <ImageButton
               android:layout_width="match_parent"
               android:layout_height="130dp"
               android:scaleType="centerCrop"
               android:src="@drawable/voz"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textStyle="bold"
               android:layout_marginBottom="8dp"
               android:gravity="center"
               android:text="@string/voz"/>
       </LinearLayout>
   </ScrollView>
</FrameLayout>